--- a/style.css
+++ b/style.css
@@ -2,21 +2,34 @@ body {
   display: grid;
   grid-template-areas:
     "header header header"
-    "nav article article"
+    "nav article ads"
     "footer footer footer";
-  grid-template-rows: 40px 1fr 60px;
-  grid-template-columns: 11% 1fr 15%;
-  grid-gap: 3px;
+  grid-template-rows: 80px 1fr 70px;
+  grid-template-columns: 20% 1fr 15%;
+  grid-row-gap: 10px;
+  grid-column-gap: 10px;
   height: 100vh;
   margin: 0;
-  text-align: center;
+}
+/* Stack the layout on small devices/viewports. */
+@media all and (max-width: 575px) {
+  body {
+    grid-template-areas:
+      "header"
+      "article"
+      "ads"
+      "nav"
+      "footer";
+    grid-template-rows: 80px 1fr 70px 1fr 70px;
+    grid-template-columns: 1fr;
+  }
 }
 header,
 footer,
 article,
 nav,
 div {
-  padding: 20px;
+  padding: 1.2em;
   background: gold;
 }
 #pageHeader {
@@ -27,34 +40,10 @@ div {
 }
 #mainArticle {
   grid-area: article;
-  overflow-y: hidden;
-  overflow-x: hidden;
 }
 #mainNav {
   grid-area: nav;
 }
-#mainNav a {
-  display: block;
-  padding: 10px 20px;
-  color: #4d4e53;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-#mainNav li {
-  color: #4d4e53;
-  border-top: 1px solid;
-  list-style: none;
-  position: relative;
-  width: 100%;
-}
-#mainNav {
-  position: fixed;
-  min-width: 50px;
-  top: 0px;
-  left: 0px;
-  width: 150px;
-  height: 100%;
-  border-right: solid;
-  border-color: rgba(0, 22, 22, 0.4);
+#siteAds {
+  grid-area: ads;
 }
