--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   display: grid;
   grid-template-areas:
     "header header header"
-    "nav article article"
+    "nav article ads"
     "footer footer footer";
   grid-template-rows: 40px 1fr 60px;
   grid-template-columns: 11% 1fr 15%;
@@ -15,12 +15,16 @@ header,
 footer,
 article,
 nav,
+ads,
 div {
   padding: 20px;
   background: gold;
 }
 #pageHeader {
   grid-area: header;
+}
+#siteAds {
+  grid-area: ads;
 }
 #pageFooter {
   grid-area: footer;
