--- a/style.css
+++ b/style.css
@@ -25,7 +25,10 @@ body {
   }
   #mainNav ul {
     margin-top: -10px;
-    text-align: center;
+    margin-left: 30px;
+  }
+  #mainNav {
+    border: 3px solid black;
   }
 }
 header,
