--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ body {
   }
   #mainNav {
     border: 3px solid yyyellow;
-
     overflow-y: auto;
     overflow-x: hidden;
   }
@@ -76,8 +75,7 @@ div {
 }
 #intro-grid code {
   font-size: 15px;
-  padding: 0.5em;
-  background: gold;
+  padding: 1.5em;
   text-align: center;
 }
 #intro-grid-fit {
@@ -89,4 +87,26 @@ div {
   font-size: 15px;
   padding: 1.5em;
   text-align: center;
+}
+pre {
+  overflow-x: scroll;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #c2cec4;
+  padding: 10%;
+  padding-left: 70%;
+  background: -moz-linear-gradient(left, #c2cec4 0%, #90a1a4 50%, #b3c5c3 100%);
+  background: -webkit-linear-gradient(
+    left,
+    #c2cec4 0%,
+    #90a1a4 50%,
+    #b3c5c3 100%
+  );
+  background: linear-gradient(to right, #c2cec4 0%, #90a1a4 50%, #b3c5c3 100%);
+
+  -webkit-box-shadow: inset -1px 3px 8px 5px #1f87ff, 2px 5px 16px 0px #0b325e,
+    -3px 13px 4px 16px rgba(0, 0, 0, 0.05);
+  box-shadow: inset -1px 3px 8px 5px #1f87ff, 2px 5px 16px 0px #0b325e,
+    -3px 13px 4px 16px rgba(0, 0, 0, 0.05);
 }
