--- a/style.css
+++ b/style.css
@@ -89,13 +89,10 @@ div {
   text-align: center;
 }
 pre {
-  overflow-x: scroll;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background: #c2cec4;
   padding-top: 5%;
   padding-bottom: 5%;
+
   background: -moz-linear-gradient(left, #c2cec4 0%, #90a1a4 50%, #b3c5c3 100%);
   background: -webkit-linear-gradient(
     left,
@@ -112,12 +109,12 @@ pre {
 }
 @media (max-width: 385px) {
   pre {
-    overflow-x: scroll;
+    overflow-x: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #c2cec4;
-    padding-left: 100px;
+    padding-left: 60px;
     background: -moz-linear-gradient(
       left,
       #c2cec4 0%,
