--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     margin-left: 30px;
   }
   #mainNav {
-    border: 3px solid yyyellow;
+    border: 3px solid yellow;
     overflow: auto;
     overflow: hidden;
   }
