--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
   }
   pre {
     overflow: auto;
+    font-size: 15px;
   }
 }
 header,
@@ -53,9 +54,9 @@ div {
 }
 #mainArticle {
   grid-area: article;
-  padding: 0;
   overflow-y: auto;
   overflow-x: hidden;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 #mainNav {
   grid-area: nav;
@@ -76,7 +77,7 @@ div {
   grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
   grid-gap: 2vw;
 }
-#intro-grid code {
+#intro-grid-fill code {
   font-size: 15px;
   padding: 1.5em;
   text-align: center;
