--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 #grid {
   display: grid;
-  grid-template-rows: 50px 1fr 80px;
+  grid-template-rows: 50px 30px 80px;
   grid-template-columns: 120px 1fr 80px;
-  grid-gap: 5px;
+  grid-gap: 2px;
   height: 90vh;
 }
 #grid > div {
